# cosmic-applibrary

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md  build_nightly.sh  flake.nix  justfile  meson.build  meson_options.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
build-aux/: com.System76.AppLibrary.Devel.json  com.System76.CosmicAppLibrary.Devel.json  com.system76.CosmicAppLibrary.Devel.json
data/: com.System76.AppLibrary.desktop.in.in  com.System76.AppLibrary.gschema.xml.in  com.System76.AppLibrary.metainfo.xml.in.in  com.System76.CosmicAppLibrary.desktop  com.System76.CosmicAppLibrary.gschema.xml  com.System76.CosmicAppLibrary.metainfo.xml  com.system76.CosmicAppLibrary.desktop  com.system76.CosmicAppLibrary.desktop.in.in  com.system76.CosmicAppLibrary.gschema.xml  com.system76.CosmicAppLibrary.gschema.xml.in  com.system76.CosmicAppLibrary.metainfo.xml  com.system76.CosmicAppLibrary.metainfo.xml.in.in  justfile
data/icons/: justfile
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: window.ui
debian/: changelog  control  copyright  install  rules
i18n/af/: cosmic_app_library.ftl
i18n/ar/: cosmic_app_library.ftl
i18n/be/: cosmic_app_library.ftl
i18n/bg/: cosmic_app_library.ftl
i18n/cs/: cosmic_app_library.ftl
i18n/de/: cosmic_app_library.ftl
i18n/en/: cosmic_app_library.ftl
i18n/es/: cosmic_app_library.ftl
i18n/es-419/: cosmic_app_library.ftl
i18n/et/: cosmic_app_library.ftl
i18n/fa/: cosmic_app_library.ftl
i18n/fr/: cosmic_app_library.ftl
i18n/ga/: cosmic_app_library.ftl
i18n/he/: cosmic_app_library.ftl
i18n/hi/: cosmic_app_library.ftl
i18n/hu/: cosmic_app_library.ftl
i18n/is/: cosmic_app_library.ftl
i18n/it/: cosmic_app_library.ftl
i18n/ja/: cosmic_app_library.ftl
i18n/kn/: cosmic_app_library.ftl
i18n/ko/: cosmic_app_library.ftl
i18n/lt/: cosmic_app_library.ftl
i18n/nb/: cosmic_app_library.ftl
i18n/nl/: cosmic_app_library.ftl
i18n/nn/: cosmic_app_library.ftl
i18n/pl/: cosmic_app_library.ftl
i18n/pt/: cosmic_app_library.ftl
i18n/pt-BR/: cosmic_app_library.ftl
i18n/ro/: cosmic_app_library.ftl
i18n/ru/: cosmic_app_library.ftl
i18n/sk/: cosmic_app_library.ftl
i18n/sr/: cosmic_app_library.ftl
i18n/sr-Cyrl/: cosmic_app_library.ftl
i18n/sr-Latn/: cosmic_app_library.ftl
i18n/sv/: cosmic_app_library.ftl
i18n/tr/: cosmic_app_library.ftl
i18n/uk/: cosmic_app_library.ftl
i18n/zh-CN/: cosmic_app_library.ftl
i18n/zh-TW/: cosmic_app_library.ftl
i18n/zh_CN/: cosmic_app_library.ftl
po/: POTFILES.in  en_GB.po
src/: app.rs  app_group.rs  application.rs  config.rs  desktop_entry_data.rs  icon_cache.rs  localize.rs  main.rs  style.css  utils.rs  window.rs
src/app_grid/: imp.rs  mod.rs
src/app_group/: imp.rs  mod.rs
src/app_item/: imp.rs  mod.rs
src/grid_item/: imp.rs  mod.rs
src/group_grid/: imp.rs  mod.rs
src/group_item/: imp.rs  mod.rs
src/subscriptions/: desktop_files.rs  mod.rs  toggle_dbus.rs
src/widgets/: application.rs  group.rs  mod.rs
src/window/: imp.rs  mod.rs
src/window_inner/: imp.rs  mod.rs
