[package]
name = "cosmic-app-library"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2021"
[features]
default = ["wgpu"]
wgpu = ["libcosmic/wgpu"]

[dependencies]
zbus = "5.7"
libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
    "winit",
    "wayland",
    "tokio",
    "single-instance",
    "dbus-config",
    "desktop-systemd-scope",
    "xdg-portal",
] }
tokio = { version = "1.45", features = ["sync", "rt", "process"] }
pretty_env_logger = "0.5"
log = "0.4"
once_cell = "1.20"
futures = "0.3.31"
xdg = "2.5.2"
# Application i18n
i18n-embed = { version = "0.15.3", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9.3"
rust-embed = "8.7"
glob = "0.3.2"
freedesktop-desktop-entry = "0.7"
shlex = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
ron = "0.10"
notify = "*"
anyhow = "1.0"
itertools = "0.14"
freedesktop-icons = { package = "cosmic-freedesktop-icons", git = "https://github.com/pop-os/freedesktop-icons" }
current_locale = "0.1.1"
url = "2.5"
nix = "0.30"
clap = { version = "4.5", features = ["derive"] }
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
cosmic-app-list-config = { git = "https://github.com/pop-os/cosmic-applets" }

[profile.release]
lto = "thin"

[patch.crates-io]
sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit//", rev = "c583de8" }
[patch."https://github.com/smithay/client-toolkit"]
sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit//", rev = "c583de8" }

# [patch."https://github.com/pop-os/libcosmic/"]
# libcosmic = { git = "https://github.com/pop-os/libcosmic//", rev = "e838616" }
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", rev = "e838616" }

# cosmic-config = { path = "../../libcosmic/cosmic-config/" }
# libcosmic = { path = "../../libcosmic/" }
