[package]
name = "cosmic-app-library"
version = "1.0.2"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2024"
[features]
default = []
wgpu = ["libcosmic/wgpu"]

[dependencies]
zbus = "5.10"
libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
    "dbus-config",
    "desktop",
    "winit",
    "wayland",
    "tokio",
    "single-instance",
    "desktop-systemd-scope",
    "xdg-portal",
] }
tokio = { version = "1.47", features = ["sync", "rt", "process"] }
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
pretty_env_logger = "0.5"
log = "0.4"
futures = "0.3.31"
# Application i18n
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
rust-embed = "8.7"
shlex = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.12"
notify = "*"
anyhow = "1.0"
itertools = "0.14"
url = "2.5"
nix = "0.30"
clap = { version = "4.5", features = ["derive"] }
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
cosmic-app-list-config = { git = "https://github.com/pop-os/cosmic-applets" }

[profile.release]
lto = "thin"

# [patch."https://github.com/pop-os/libcosmic/"]
# libcosmic = { git = "https://github.com/pop-os/libcosmic//", rev = "e838616" }
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", rev = "e838616" }

# cosmic-config = { path = "../../libcosmic/cosmic-config/" }
# libcosmic = { path = "../../libcosmic/" }
