option(
  'profile',
  type: 'combo',
  choices: [
    'default',
    'development'
  ],
  value: 'default',
  description: 'The build profile for Cosmic App Library. One of "default" or "development".'
)

option(
  'vendor',
  type: 'boolean',
  value: true,
  description: 'Whether or not sources are vendored.'
)
